--- a/JiaoBaoYun-hb/html/quan/pub-leave.html
+++ b/JiaoBaoYun-hb/html/quan/pub-leave.html
@@ -43,7 +43,7 @@ textarea {
 		</header>
 		<div class="mui-content">
 			<div class="input-content">
-				<textarea id='content' placeholder="留言..." ></textarea>
+				<textarea id='content' placeholder="添加留言，最多300字" ></textarea>
 			</div>
 		</div>
 	</body>
