--- a/JiaoBaoYun-hb/html/quan/zonep_sub.html
+++ b/JiaoBaoYun-hb/html/quan/zonep_sub.html
@@ -663,7 +663,7 @@
 				console.log('跳转到点赞人列表界面')
 				var index = this.id.replace('PraiseList', '')
 				var LikeUsers = zonepArray[index].LikeUsers
-				console.log(JSON.stringify(LikeUsers)
+				console.log(JSON.stringify(LikeUsers))
 				mui.openWindow({
 					url: 'classSpace-persons.html',
 					id: 'classSpace-persons.html',
