1、已查阅按钮位置不对 2、留言板不可回复自己 3、我关注的人上拉空白 5、专家界面名字中有换行符 界面显示出错

--- a/JiaoBaoYun-hb/html/homework/workdetail-tea-sub.html
+++ b/JiaoBaoYun-hb/html/homework/workdetail-tea-sub.html
@@ -451,6 +451,8 @@
 
 					if(remainArray[i].IsAlertChecked == true) {
 						alert = '已查阅';
+						disabled = 'disabled';
+						btn_class = "btn-alerted"
 						allAlertFlag++;
 					} else if(remainArray[i].IsAlerted == false) {
 						alert = '提醒';
