增加隐藏键盘的公共方法，安卓调用原生。调整点到记事，笔记，档案的隐藏键盘逻辑

--- a/JiaoBaoYun-hb/html/cloud/app_notes_create.html
+++ b/JiaoBaoYun-hb/html/cloud/app_notes_create.html
@@ -101,7 +101,7 @@
 
 				//完成
 				document.getElementById('finish').addEventListener('tap', function() {
-					document.activeElement.blur();
+					events.hideKeyBoard();
 					if(notes.value.replace(/(^\s*)|(\s*$)/g, "") == "" && multiMedia.data.PictureArray.length == 0) { //为空不允许发送
 						mui.toast('笔记不能为空');
 					} else if(notes.value.length > 2000) {
