--- a/JiaoBaoYun-hb/html/show/show_home_1.html
+++ b/JiaoBaoYun-hb/html/show/show_home_1.html
@@ -91,7 +91,7 @@
 					personalUTID = myStorage.getItem(storageKeyName.PERSONALINFO).utid;
 					pageIndex = 1;
 					pullFlag = 0;
-					if(cityID == 0) {
+					if(cityID == 1) {
 						getFocusByUser()
 					} else {
 						requestData(cityID, 1);
@@ -362,6 +362,7 @@
 									setTimeout(function() {
 										if(info.aflag == 0) { //定制的城市
 											requestData(info.acode, page.pageIndex + 1);
+											self.endPullUpToRefresh();
 										} else {
 
 											//关注的人数据
@@ -436,7 +437,7 @@
 							aname: '全部',
 							aflag: 0 //0为根据省市编码获取数据，1为获取关注的人的列表
 						});
-						if(data.RspData[0].citys) {
+						if(data.RspData[0].citys && data.RspData[0].citys != "") {
 							//先通过‘|’将返回值分为数组
 							tempArray = data.RspData[0].citys.split('|');
 							//遍历此数组
@@ -459,21 +460,35 @@
 							}
 							eduArray = eduArray.concat(tempArray)
 							console.log('修改后的最终值为:' + JSON.stringify(eduArray));
+						} else {
+							eduArray = [];
+							//如果定制城市为空
+							var uarea = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).uarea;
+							console.log(JSON.stringify(uarea));
+							eduArray.push({
+								acode: 0,
+								aname: '全部',
+								aflag: 0 //0为根据省市编码获取数据，1为获取关注的人的列表
+							});
+							//加入手机号所在城市
+
+							eduArray.push({
+								acode: uarea.acode,
+								aname: uarea.aname,
+								aflag: 0 //0为根据省市编码获取数据，1为获取关注的人的列表
+							});
 						}
 					} else {
+						console.log('无定制城市')
 						eduArray = [];
-						//						mui.toast(data.RspTxt);
-					}
-					//如果定制城市为空
-
-					if(eduArray.length == 0) {
+						//如果定制城市为空
 						var uarea = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).uarea;
 						console.log(JSON.stringify(uarea));
-						//						eduArray.push({
-						//							acode: 0,
-						//							aname: '全部',
-						//							aflag: 0 //0为根据省市编码获取数据，1为获取关注的人的列表
-						//						});
+						eduArray.push({
+							acode: 0,
+							aname: '全部',
+							aflag: 0 //0为根据省市编码获取数据，1为获取关注的人的列表
+						});
 						//加入手机号所在城市
 
 						eduArray.push({
@@ -481,6 +496,8 @@
 							aname: uarea.aname,
 							aflag: 0 //0为根据省市编码获取数据，1为获取关注的人的列表
 						});
+
+						//						mui.toast(data.RspTxt);
 					}
 					//加入关注的人数据
 					eduArray.push({
@@ -490,6 +507,7 @@
 						index: 1, //请求第几页数据
 						isRefresh: 0 //是刷新0，还是加载更多1
 					});
+					console.log(JSON.stringify(eduArray));
 					cities = eduArray.slice(0); //拷贝数组
 					callBack(cities);
 					waitingDia.close();
@@ -620,7 +638,11 @@
 							//合并数组,点赞的人
 							tempArray = tempArray.concat(tempModel0.LikeUsers);
 							console.log(JSON.stringify(tempModel0.LikeUsers));
-							tempModel0.LikeUsers = arrayDupRemoval(tempModel0.LikeUsers);
+							for(var i in tempModel0.LikeUsers){
+								tempArray = tempArray.concat(tempModel0.LikeUsers[i].userid);
+//								tempModel0.LikeUsers = arrayDupRemoval(tempModel0.LikeUsers);
+							}
+//							tempModel0.LikeUsers = arrayDupRemoval(tempModel0.LikeUsers);
 							//循环当前model中的回复数组
 							for(var item1 in tempModel0.Comments) {
 								//回复中的model
@@ -664,8 +686,9 @@
 										//遍历点赞的人
 										for(var item2 in tempModel0.LikeUsers) {
 											//										console.log('item2;;;;;==' + tempModel.utid + ',' + tempModel0.LikeUsers[item2]);
-											if(tempModel.utid == tempModel0.LikeUsers[item2]) {
-												tempModel0.LikeUsers.splice(item2, 1, tempModel);
+											if(tempModel.utid == tempModel0.LikeUsers[item2].userid) {
+//												tempModel0.LikeUsers.splice(item2, 1, tempModel);
+												tempModel0.LikeUsers[item2] = $.extend(tempModel0.LikeUsers[item2], tempModel);
 											}
 										}
 										//对比id是否一致
@@ -766,7 +789,6 @@
 					var pageID = sliderId.replace('top_', '')
 					var tempId = this.id;
 					var index = this.id.replace('btn-focus' + pageID + 'zx', '');
-					console.log('index=' + index)
 					var isFocus = zonepArray[index].IsFocused;
 					//					var isFocus = jQuery('#'+this.id).data('isFocus');
 					var title, status;
@@ -774,7 +796,7 @@
 						title = '关注'
 						status = 1;
 					} else {
-						title = '已关注'
+						title = '取消关注'
 						status = 0;
 					}
 					var btnArray = [{ title: title, style: "destructive" }];
@@ -804,7 +826,7 @@
 											var pageID = sliderId.replace('top_', '')
 											setTimeout(function() {
 												//获取数据
-												if(pageID != 0) { //定制的城市
+												if(pageID != 1) { //定制的城市
 													for(var i = 0; i < zonepArray.length; i++) {
 														if(zonepArray[index].PublisherId == zonepArray[i].PublisherId) {
 															if(isFocus == 0) {
@@ -964,12 +986,12 @@
 							console.log(JSON.stringify(data))
 							if(data.RspCode == 0) {
 								var btn = document.getElementById(tempId);
-								btn.innerHTML = '已关注'
+								btn.innerHTML = '取消关注'
 								btn.className = 'mui-btn mui-pull-right btn-attentioned'
 								var pageID = sliderId.replace('top_', '')
 								setTimeout(function() {
 									//获取数据
-									if(pageID != 0) { //定制的城市
+									if(pageID != 1) { //定制的城市
 										requestData(pageID, 1);
 									} else { //关注的人数据
 										//81.（用户空间）获取用户所有关注的用户
@@ -981,7 +1003,7 @@
 							}
 
 						})
-					}) //点击已关注
+					}) //点击取消关注
 				mui('#sliderGroup').on('tap', '.btn-attentioned', function() {
 					var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid; //用户昵称
 
@@ -1005,9 +1027,10 @@
 							btn.innerHTML = '关注'
 							btn.className = 'mui-btn mui-pull-right btn-attention'
 							var pageID = sliderId.replace('top_', '')
+							console.log('hhhhhhhhhh='+pageID)
 							setTimeout(function() {
 								//获取数据
-								if(pageID != 0) { //定制的城市
+								if(pageID != 1) { //定制的城市
 									requestData(pageID, 1);
 								} else { //关注的人数据
 									//81.（用户空间）获取用户所有关注的用户
@@ -1166,8 +1189,12 @@
 				var personIds = [];
 				for(var i in data) {
 					personIds.push(data[i].PublisherId);
-					data[i].LikeUsers = arrayDupRemoval(data[i].LikeUsers);
-					personIds = personIds.concat(data[i].LikeUsers);
+					for(var item in data[i].LikeUsers){
+						personIds = personIds.concat(data[i].LikeUsers[item].userid);
+					}
+					
+//					data[i].LikeUsers = arrayDupRemoval(data[i].LikeUsers);
+//					personIds = personIds.concat(data[i].LikeUsers);
 
 					if(data[i].Comments) {
 						for(var j in data[i].Comments) {
@@ -1234,7 +1261,7 @@
 						}
 						//遍历点赞的人
 						for(var item2 in data[i].LikeUsers) {
-							if(personsData[j].utid == data[i].LikeUsers[item2]) {
+							if(personsData[j].utid == data[i].LikeUsers[item2].userid) {
 								data[i].LikeUsers[item2] = mui.extend(data[i].LikeUsers[item2], personsData[j])
 							}
 
