--- a/JiaoBaoYun-hb/html/index/mine.html
+++ b/JiaoBaoYun-hb/html/index/mine.html
@@ -177,7 +177,8 @@
 							break;
 							//设置
 						case 6:
-							events.openNewWindow('/html/mine/setting.html')
+//							events.openNewWindow('/html/mine/setting.html');
+							events.openNewWindowWithData('/html/mine/setting.html', '');
 							break;
 							//关于
 						case 7:
