--- a/JiaoBaoYun-hb/html/qiuzhi/expert-ask.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/expert-ask.html
@@ -100,9 +100,17 @@
 			}
 			
 			.mui-table h4 {
+				font-family: "楷体";
+				font-size: 1.6rem;
 				line-height: 21px;
-				font-weight: 500;
+				font-weight: 510;
 				padding-left: 0px;
+				
+				
+				/*line-height: 21px;
+				font-weight: 510;
+				padding-left: 10px;
+				letter-spacing: 0.5px;*/
 			}
 			
 			.mui-table .oa-icon {
