--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-expertAllAnswer.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-expertAllAnswer.html
@@ -301,10 +301,10 @@
 					'<div class="mui-table-cell mui-col-xs-12">' +
 					'<h4 class="mui-ellipsis">' +
 					record.AskTitle +
-					'</h4><h5>' +
+					'</h4><h5 style="letter-spacing :0.3px;">' +
 					record.AnswerContent +
 					'</h5>' +
-					'<p class="mui-h6 mui-ellipsis">' + record.IsLikeNum + '赞·' + record.CommentNum + '评论·' + modifyTimeFormat(record.AnswerTime) +
+					'<p class="mui-h6 mui-ellipsis">' + record.IsLikeNum + '赞 · ' + record.CommentNum + '评论 · ' + modifyTimeFormat(record.AnswerTime) +
 					'</p></div></div>';
 				listContainer.appendChild(li);
 			}
