--- a/JiaoBaoYun-hb/html/mine/qun_data_details.html
+++ b/JiaoBaoYun-hb/html/mine/qun_data_details.html
@@ -124,25 +124,25 @@
 					<li class="mui-table-view-cell text-color-disabled">
 						<div class="mui-input-row">
 							<label>昵称:</label>
-							<input id="stu_unick" type="text" disabled>
+							<input id="stu_unick" type="text" class="input-disabled">
 						</div>
 					</li>
 					<li class="mui-table-view-cell text-color-disabled">
 						<div class="mui-input-row">
 							<label>学生账号:</label>
-							<input id="stu_uname" type="text" disabled>
+							<input id="stu_uname" type="text" class="input-disabled">
 						</div>
 					</li>
 					<li class="mui-table-view-cell text-color-disabled">
 						<div class="mui-input-row">
 							<label>学生电话:</label>
-							<input id="stu_phone" type="text" disabled>
+							<input id="stu_phone" type="text" class="input-disabled">
 						</div>
 					</li>
 					<li class="mui-table-view-cell text-color-disabled">
 						<div class="mui-input-row ">
 							<label>性别:</label>
-							<input id="stu_gender" type="text" disabled>
+							<input id="stu_gender" type="text" class="input-disabled">
 						</div>
 					</li>
 				</ul>
@@ -160,25 +160,25 @@
 					<li class="mui-table-view-cell text-color-disabled">
 						<div class="mui-input-row">
 							<label>昵称:</label>
-							<input id="tea_unick" type="text" disabled>
+							<input id="tea_unick" type="text" class="input-disabled">
 						</div>
 					</li>
 					<li class="mui-table-view-cell text-color-disabled">
 						<div class="mui-input-row">
 							<label>账号:</label>
-							<input id="tea_uname" type="text" disabled>
+							<input id="tea_uname" type="text" class="input-disabled">
 						</div>
 					</li>
 					<li class="mui-table-view-cell text-color-disabled">
 						<div class="mui-input-row">
 							<label>手机号:</label>
-							<input id="tea_phone" type="text" disabled>
+							<input id="tea_phone" type="text" class="input-disabled">
 						</div>
 					</li>
 					<li class="mui-table-view-cell text-color-disabled">
 						<div class="mui-input-row">
 							<label>性别:</label>
-							<input id="tea_gender" type="text" disabled>
+							<input id="tea_gender" type="text" class="input-disabled">
 						</div>
 					</li>
 					<li class="mui-table-view-cell">
@@ -511,6 +511,8 @@
 									utid: teaData.utid,
 									dataType: '2'
 								}]); //查找关联的老师账号信息
+							}else{
+								inputSetDisabled();
 							}
 						} else if(type == 3) { //学生
 							var utidArray = [];
@@ -551,6 +553,8 @@
 
 							if(utidArray.length != 0) {
 								getUserData(utidArray); //获取关联账号的信息
+							} else {
+								inputSetDisabled();
 							}
 						}
 					} else {
@@ -568,10 +572,10 @@
 									expsch: '', //教龄,老师必填,其他留空
 									sub: '', //科目,老师必填,其他留空
 								}
-								tea_job.setAttribute('disabled', 'disabled'); //老师职位
-								tea_sub.setAttribute('disabled', 'disabled'); //老师科目
-								tea_title.setAttribute('disabled', 'disabled'); //老师职称
-								tea_expsch.setAttribute('disabled', 'disabled'); //老师教龄
+								tea_job.disabled = true; //老师职位
+								tea_sub.disabled = true; //老师科目
+								tea_title.disabled = true; //老师职称
+								tea_expsch.disabled = true; //老师教龄
 							} else if(type == 3) { //学生
 								stu_name.value = mainData.stuname;
 							}
@@ -591,13 +595,13 @@
 				var html1 = '<li class="mui-table-view-cell text-color-disabled">\
 									<div class="mui-input-row">\
 										<label>家长昵称:</label>\
-										<input id="par_ugname_' + data.utid + '" type="text"  value="' + data.ugname + '" disabled="disabled">\
+										<input id="par_ugname_' + data.utid + '" type="text"  value="' + data.ugname + '" class="input-disabled">\
 									</div>\
 								</li>\
 								<li class="mui-table-view-cell text-color-disabled">\
 									<div class="mui-input-row">\
 										<label>家长账号:</label>\
-										<input id="par_uname_' + data.utid + '" type="text"  disabled="disabled">\
+										<input id="par_uname_' + data.utid + '" type="text"  class="input-disabled">\
 									</div>\
 								</li>';
 				var html2 = '<li class="mui-table-view-cell">\
@@ -609,7 +613,7 @@
 				var html3 = '<li class="mui-table-view-cell text-color-disabled">\
 									<div class="mui-input-row">\
 										<label>家长电话:</label>\
-										<input id="par_phone_' + data.utid + '" type="text"  disabled="disabled">\
+										<input id="par_phone_' + data.utid + '" type="text"  class="input-disabled">\
 									</div>\
 								</li >\
 								<div style="height:1px;width:100%;"></div>';
@@ -661,10 +665,10 @@
 									var uData = element;
 									if(element2.dataType == '3') { //学生
 										console.log('学生账号 ' + JSON.stringify(uData));
-										stu_unick.value = uData.unick;//昵称
-										stu_uname.value = uData.uname;//账号
-										stu_phone.value = uData.uid;//手机号
-										if(uData.usex == 1) {//性别
+										stu_unick.value = uData.unick; //昵称
+										stu_uname.value = uData.uname; //账号
+										stu_phone.value = uData.uid; //手机号
+										if(uData.usex == 1) { //性别
 											stu_gender.value = '男';
 										} else if(uData.usex == 2) {
 											stu_gender.value = '女';
@@ -675,10 +679,10 @@
 										document.getElementById("par_uname_" + uData.utid).value = uData.uname;
 										document.getElementById("par_phone_" + uData.utid).value = uData.uid;
 									} else if(element2.dataType == '2') { //教师
-										tea_unick.value = uData.unick;//昵称
-										tea_uname.value = uData.uname;//账号
-										tea_phone.value = uData.uid;//手机号
-										if(uData.usex == 1) {//性别
+										tea_unick.value = uData.unick; //昵称
+										tea_uname.value = uData.uname; //账号
+										tea_phone.value = uData.uid; //手机号
+										if(uData.usex == 1) { //性别
 											tea_gender.value = '男';
 										} else if(uData.usex == 2) {
 											tea_gender.value = '女';
@@ -745,6 +749,7 @@
 							});
 						});
 					}
+					inputSetDisabled();
 					wd.close();
 				});
 			}
@@ -885,6 +890,17 @@
 					}
 					wd.close();
 				});
+			}
+
+			/**
+			 * 禁止某些input不允许输入
+			 * 因为iOS兼容性问题，input设置了disabled后无法设置value,所以在获得数据后再设置disabled
+			 */
+			function inputSetDisabled() {
+				var disabledArray = document.querySelectorAll('.input-disabled');
+				for(var i = 0; i < disabledArray.length; i++) {
+					disabledArray[i].disabled = true;
+				}
 			}
 		</script>
 	</body>
